--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "gulp-autoprefixer": "^5.0.0",
     "gulp-cache": "^1.0.2",
     "gulp-concat": "^2.6.1",
+    "gulp-convert-encoding": "^1.0.0",
     "gulp-cssnano": "^2.1.3",
+    "gulp-header": "^2.0.5",
     "gulp-imagemin": "^4.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^4.0.1",
