--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-header": "^2.0.5",
     "gulp-imagemin": "^4.1.0",
+    "gulp-less": "^3.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^4.0.1",
     "gulp-uglifyjs": "^0.6.2",
-    "imagemin-pngquant": "^5.1.0",
-    "less": "^3.0.4"
-  }
+    "imagemin-pngquant": "^5.1.0"
+  },
+  "dependencies": {}
 }
