--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-convert-encoding": "^1.0.0",
     "gulp-cssnano": "^2.1.3",
+    "gulp-csso": "^3.0.1",
     "gulp-header": "^2.0.5",
     "gulp-imagemin": "^4.1.0",
     "gulp-less": "^3.5.0",
